--- a/src/fullnode.yaml
+++ b/src/fullnode.yaml
@@ -554,7 +554,7 @@ paths:
       operationId: get_coin_records_by_puzzle_hash
       requestBody:
         required: true
-        description: The puzzle_hash.
+        description: The puzzle hash.
         content:
           application/json:
             schema:
@@ -565,6 +565,49 @@ paths:
                 puzzle_hash:
                   type: string
                   format: hex
+                start_height:
+                  type: integer
+                  format: uint32
+                end_height:
+                  type: integer
+                  format: uint32
+                include_spent_coins:
+                  type: boolean
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  coin_records:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/coin_record"
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
+  /get_coin_records_by_puzzle_hashes:
+    post:
+      tags:
+        - Coins
+      summary: Retrieves the coins for a given puzzlehashes, by default returns unspent coins.
+      operationId: get_coin_records_by_puzzle_hashes
+      requestBody:
+        required: true
+        description: The puzzle hashes.
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - puzzle_hashes
+              properties:
+                puzzle_hashes:
+                  type: array
+                  items:
+                    type: string
+                    format: hex
                 start_height:
                   type: integer
                   format: uint32
