--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -11,7 +11,7 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-servers: 
+servers:
   - url: https://localhost:9256
     description: Wallet RPC
 security:
@@ -22,9 +22,23 @@ components:
       $ref: "./requestBodies/empty.yaml#/empty"
     wallet_id:
       $ref: "./requestBodies/wallet_id.yaml#/wallet_id"
+    fingerprint:
+      $ref: "./requestBodies/fingerprint.yaml#/fingerprint"
   responses:
     empty:
-      $ref: "./responses/empty.yaml#/empty"    
+      $ref: "./responses/empty.yaml#/empty"
+    fingerprint:
+      description: OK
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              fingerprint:
+                type: integer
+                format: uint32
+            allOf:
+              - $ref: "#/components/schemas/apiResponse"
   schemas:
     wallet_balance:
       $ref: "./schemas/wallet_balance.yaml#/wallet_balance"
@@ -34,16 +48,16 @@ components:
     bearerAuth:
       $ref: "./securitySchemes/bearerAuth.yaml#/bearerAuth"
 tags:
-- name: Wallet
-  description: The wallet RPC API is exposed, by default, on port 9256 and contains methods for managing wallet, trades, offers and transactions.
-- name: Standard Wallet
-  description: Methods for standard wallet operations.  
+  - name: Wallet
+    description: The wallet RPC API is exposed, by default, on port 9256 and contains methods for managing wallet, trades, offers and transactions.
+  - name: Standard Wallet
+    description: Methods for standard wallet operations.
 paths:
   /get_wallet_balance:
     post:
       tags:
-      - Standard Wallet
-      summary: Get the balance of a specific wallet (in units of mojos).
+        - Standard Wallet
+      summary: Get the balance of a specific wallet.
       description: Get the balance of a specific wallet (in units of mojos).
       operationId: get_wallet_balance
       requestBody:
@@ -55,7 +69,7 @@ paths:
             application/json:
               schema:
                 type: object
-                required: 
+                required:
                   - wallet_balance
                 properties:
                   wallet_balance:
@@ -65,8 +79,9 @@ paths:
   /get_network_info:
     post:
       tags:
-      - Wallet
+        - Wallet
       summary: Retrieves some information about the current network.
+      description: Retrieves some information about the current network.
       operationId: wallet_get_network_info
       requestBody:
         $ref: "#/components/requestBodies/empty"
@@ -78,14 +93,26 @@ paths:
               schema:
                 required:
                   - network_name
-                  - network_prefix                  
+                  - network_prefix
                 properties:
                   network_name:
                     type: "string"
                   network_prefix:
-                    type: "string" 
+                    type: "string"
                 allOf:
                   - $ref: "#/components/schemas/apiResponse"
+  /log_in:
+    post:
+      tags:
+        - Wallet
+      summary: Logs in the wallet with a specific key.
+      description: Logs in the wallet with a specific key.
+      operationId: log_in
+      requestBody:
+        $ref: "#/components/requestBodies/fingerprint"
+      responses:
+        200:
+          $ref: "#/components/responses/fingerprint"
 externalDocs:
   description: Find out more about chia
   url: http://chia.net
