--- a/src/fullnode.yaml
+++ b/src/fullnode.yaml
@@ -94,6 +94,8 @@ components:
       $ref: "./schemas/end_of_sub_slot_bundle.yaml#/end_of_sub_slot_bundle"
     mempool_item:
       $ref: "./schemas/mempool_item.yaml#/mempool_item"
+    network_info:
+      $ref: "./schemas/network_info.yaml#/network_info"
     node_type:
       $ref: "./schemas/node_type.yaml#/node_type"
     signage_point:
@@ -457,16 +459,8 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                required:
-                  - network_name
-                  - network_prefix
-                properties:
-                  network_name:
-                    type: string
-                  network_prefix:
-                    type: string
                 allOf:
+                  - $ref: "#/components/schemas/network_info"
                   - $ref: "#/components/schemas/apiResponse"
   /get_network_space:
     post:
