--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -40,6 +40,8 @@ components:
             allOf:
               - $ref: "#/components/schemas/apiResponse"
   schemas:
+    network_info:
+      $ref: "./schemas/network_info.yaml#/network_info"
     wallet_balance:
       $ref: "./schemas/wallet_balance.yaml#/wallet_balance"
     apiResponse:
@@ -93,15 +95,8 @@ paths:
           content:
             application/json:
               schema:
-                required:
-                  - network_name
-                  - network_prefix
-                properties:
-                  network_name:
-                    type: "string"
-                  network_prefix:
-                    type: "string"
                 allOf:
+                  - $ref: "#/components/schemas/network_info"
                   - $ref: "#/components/schemas/apiResponse"
   /log_in:
     post:
